--- a/server/package.json
+++ b/server/package.json
@@ -7,5 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Sunil Kumar",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.20.2",
+    "dgram": "^1.0.1",
+    "express": "^4.18.2",
+    "mongoose": "^7.4.5",
+    "winston": "^3.10.0",
+    "winston-mongodb": "^5.1.1"
+  }
 }
